public/styles/styles.css
.header {
    background-color: #4DBC96;
    padding: 3em;
    display: flex;
    justify-content: center;
    
}

h1 {
    font-size: 3.25em;
}

.input-header {
    background-color: #4DBC96;
    width: 80%;
    margin: 6em auto 0;
    padding: 2em;
    text-align: center;
    border-radius: .75em .75em 0 0;
}

h2 {
    font-size: 2.75em;
}

.inputs {
    width: 80%;
    margin: auto;
    padding: 2em;
    border: 1px solid grey;
    border-radius: 0 0 .75em .75em;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.inputs-form {
    display: flex;
    width: 80%;
    flex-direction: column;
    align-items: center;
}

.form-grid {
    margin: 2em;
    width: 80%;
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto;
    grid-row-gap: 2em;
}

.form-prompt {
    font-size: 1.75em;
    margin-right: 2em;
    text-align: right;
}

.textfield {
    height: 3em;
    width: 16em;
}

#submitBtn {
    margin: .75em 0 1em 0;
    font-size: 2em;
    padding: .25em 2em;
    border-radius: .75em;
    color: white;
    background-color: #724BDC;
}

.signup-link {
    font-size: 2em;
    color: #0645AD;
}

.footer {
    position: absolute;
    width: 100%;
    bottom: 0;
    display: flex;
    justify-content: center;
}

.links {
    display: flex;
    justify-content: center;
    width: 80%;
    list-style: none;
}

#about, #terms, #creators, #help {
    flex: 1;
    color: #0645AD;
    font-size: 1.75em;
    text-align: center;
}

@media only screen and (min-width: 768px) {
    .input-header {
        border-radius: 1em 1em 0 0;
    }

    .inputs {
        border-radius: 0 0 1em 1em;
    }

    #submitBtn {
        border-radius: 1em;
    }
}

